[project]
name = "cyberscan"
version = "1.2.0"
description = "Local authorized web vulnerability scanner with reports and a desktop-style web UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "requests",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
cyberscan = "cyberscan:main"
cyberscan-web = "app:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
